[package]
name = "omg_core"
version = "0.1.0"
authors = ["Orchaldir <orchaldir@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4"
derive-new = "0.5"
env_logger = "0.8"
log = "0.4"
noise = "0.7"
num-traits = "0.2"
svgbobdoc = "0.2"
unwrap = "1.2"
