[package]
name = "omg_editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
image = "0.24"
omg_core = "0.1"
omg_serde = { path = "../omg_serde" }
rocket = "0.5.0-rc.2"

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.2"
features = ["tera"]
