[package]
name = "omg_editor"
version = "0.1.0"
authors = ["Orchaldir <orchaldir@gmail.com>"]
edition = "2021"
license = "GPL-3.0"
description = "An map editor for omg_core."
homepage = "https://github.com/Orchaldir/omg/"
repository = "https://github.com/Orchaldir/omg/"
readme = "../README.md"
keywords = ["generation", "map", "procedural", "rocket"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
image = "0.24"
omg_core = "0.1"
omg_serde = "0.1"
rocket = "0.5.0-rc.2"

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.2"
features = ["tera"]
