[package]
name = "omg_serde"
version = "0.1.0"
authors = ["Orchaldir <orchaldir@gmail.com>"]
edition = "2021"
license = "GPL-3.0"
description = "A library to generate maps with user-defined attributes like rainfall & temperature."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
derive-new = "0.5"
omg_core = { path = "../omg_core" }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"